# cinema-mate

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  adsda  alembic.ini  docker-compose.yml  online_cinema.db  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml  test_on_push.yaml
alembic/: env.py
alembic/versions/: 04e28e34bd10_initial.py  0c729f10b5a8_new_initial.py  32cedb66339c_movies_model_upgrade.py  3b859d2561ae_initial.py  44c3ae62ea77_initial.py  5746292a00f8_initial_clean_state.py  84eb2da39dc1_migration4_added_favourite_m2m.py  95eccbb2d7ee_migration5.py  9f4c9c6ca7bb_initial_tables.py  b02755fe9efd_add_to_migration_payment_paymentitem_.py  b504113a92a6_migration3.py  bc5d8cebee83_add_new_column_to_user_table.py  e0d5d53edd5c_movies_model_add.py  e827f215769f_create_users_tables.py  eabc0ccb1563_add_new_models_for_ordering.py
src/: create_fastapi.py  main.py  prestart.sh
src/config/: settings.py
src/database/: __init__.py  session_postgresql.py  session_sqlite.py
src/database/models/: __init__.py  accounts.py  base.py  movies.py  order.py  payments.py  shopping_cart.py
src/notifications/: emails.py  sendgrid.py
src/notifications/send_email/: send_activation_email.py  send_activation_email_complete.py  (+3 more)
src/querying/: movie_filtering.py  movie_sorting.py  payment_filtering.py
src/routes/: accounts.py  movies.py  orders.py  payments.py  shopping_carts.py
src/schemas/: accounts.py  movies.py  orders.py  shopping_carts.py
src/security/: token_manipulation.py  utils.py  validations.py
src/tests/: conftest.py
(+7 files in other folders)
