[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Heorhii Nadiradze <swain.volt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
chardet = "^5.2.0"
requests = "^2.32.4"
sqlalchemy = "2.0.42"
aioredis = "2.0.1"
aiosmtplib = "^4.0.1"
aiosqlite = "^0.21.0"
alembic = "^1.16.4"
amqp = "5.3.1"
annotated-types = "0.7.0"
anyio = "4.9.0"
async-timeout = "5.0.1"
asyncpg = "0.30.0"
bcrypt = "4.3.0"
billiard = "4.2.1"
redis = "5.2.1"
watchfiles = "1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
